--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
+  flutter_image_compress: ^2.3.0
   flutter_svg: ^2.0.7
   fluttertoast: ^8.2.6
   geocoding: ^3.0.0
