--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.8
   dio: ^5.6.0
+  dropdown_search: ^6.0.0
   firebase_auth: ^5.1.4
   firebase_core: ^3.3.0
   flutter:
@@ -24,7 +25,10 @@ dependencies:
   google_sign_in: ^6.2.1
   here_sdk:
     path: plugins/here_sdk
+  image: ^4.2.0
   image_picker: ^1.1.2
+  intl: ^0.19.0
+  path_provider: ^2.1.4
   permission_handler: ^11.3.1
   supabase_flutter: ^2.6.0
   url_launcher: ^6.3.0
