--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^5.1.0
   flutter_image_compress: ^2.3.0
+  flutter_launcher_icons: ^0.13.1
   flutter_svg: ^2.0.7
   fluttertoast: ^8.2.6
   geocoding: ^3.0.0
@@ -38,10 +39,16 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  image_path: "assets/image/logo_sima.png"
+  min_sdk_android: 21
+
 flutter:
   uses-material-design: true
   assets:
     - assets/icon/
     - assets/image/
     - assets/image/marker_map.png
+    - assets/image/logo_sima.png
     - .env
